src/snek/snapshots/serpentine__snek__tests__no_return.snek.snap
---
source: src/snek/mod.rs
expression: err
---
  x Compile Error

Error: compiler::no_return

  x No return found.
   ,-[<redacted-path>:1:5]
 1 | def Double(value) {}
   :     ^^^|^^
   :        `-- In this function.
 2 | 
   `----
