src/snek/snapshots/serpentine__snek__tests__return_in_top_level.snek.snap
---
source: src/snek/mod.rs
expression: err
---
  x Compile Error

Error: compiler::invalid_statement

  x return not allowed in top level
   ,-[<redacted-path>:1:1]
 1 | return Add(10, 10);
   : ^^^|^^
   :    `-- This statement is not allowed here
   `----
  help: export
