src/snek/snapshots/serpentine__snek__tests__shadow_in_function.snek.snap
---
source: src/snek/mod.rs
expression: err
---
  x Compile Error

Error: 
  x Inlining function failed
  `-> compiler::item_already_defined
      
        x Item 'value' already defined in this scope
         ,-[/home/viv/coding/serpentine/test_cases/negative/shadow_in_function.snek:4:5]
       3 | def Foo(bar) {
       4 |     value = Add(bar, 5);
         :     ^^|^^
         :       `-- This name is already defined in this scope
       5 |     return Add(value, value);
         `----
        help: Snek semantically speaking does not have a specified execution order, so shadowing is not allowed.
      
   ,-[/home/viv/coding/serpentine/test_cases/negative/shadow_in_function.snek:8:18]
 7 | 
 8 | export DEFAULT = Foo(value);
   :                  ^|^
   :                   `-- In this call
   `----
