src/snek/snapshots/serpentine__snek__tests__type_mismatch_builtin.snek.snap
---
source: src/snek/mod.rs
expression: err
---
  x Compile Error

Error: compiler::type_mismatch

  x Expected `integer` got `string`
   ,-[<redacted-path>:1:22]
 1 | export DEFAULT = 1 > Add("Hello");
   :                      ^^^^^^|^^^^^^|
   :                            |      `-- Has type `string`
   :                            `-- In call to this node
   `----
